funciones paquetes y tarea

--- a/python_A-Z_Data-Science/funciones.ipynb
+++ b/python_A-Z_Data-Science/funciones.ipynb
@@ -2,23 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j']"
+       "range(20, 31)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "letras= ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j']\n",
-    "letras"
+    "range(20,31)"
    ]
   },
   {
@@ -29,7 +28,7 @@
     {
      "data": {
       "text/plain": [
-       "['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j']"
+       "[20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30]"
       ]
      },
      "execution_count": 2,
@@ -38,7 +37,7 @@
     }
    ],
    "source": [
-    "letras[:]"
+    "list(range(20,31))"
    ]
   },
   {
@@ -49,7 +48,7 @@
     {
      "data": {
       "text/plain": [
-       "['c', 'd', 'e', 'f', 'g', 'h', 'i', 'j']"
+       "[20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30]"
       ]
      },
      "execution_count": 3,
@@ -58,7 +57,8 @@
     }
    ],
    "source": [
-    "letras[2:]"
+    "MiLista1 = list(range(20,31))\n",
+    "MiLista1"
    ]
   },
   {
@@ -67,18 +67,15 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['a', 'b', 'c', 'd', 'e', 'f', 'g']"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30]\n"
+     ]
     }
    ],
    "source": [
-    "letras[:7]"
+    "print(MiLista1)"
    ]
   },
   {
@@ -89,7 +86,7 @@
     {
      "data": {
       "text/plain": [
-       "['c', 'd', 'e', 'f', 'g']"
+       "11"
       ]
      },
      "execution_count": 5,
@@ -98,27 +95,16 @@
     }
    ],
    "source": [
-    "letras[2:7]"
+    "len(MiLista1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['c', 'd', 'e', 'f', 'g']"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "letras[-8:7]"
+    "type(MiLista1)"
    ]
   },
   {
@@ -129,7 +115,7 @@
     {
      "data": {
       "text/plain": [
-       "['c', 'e', 'g', 'i']"
+       "30"
       ]
      },
      "execution_count": 7,
@@ -138,7 +124,7 @@
     }
    ],
    "source": [
-    "letras[2:9:2]"
+    "max(MiLista1)"
    ]
   },
   {
@@ -149,7 +135,7 @@
     {
      "data": {
       "text/plain": [
-       "['a', 'd', 'g', 'j']"
+       "20"
       ]
      },
      "execution_count": 8,
@@ -158,48 +144,15 @@
     }
    ],
    "source": [
-    "letras[::3]"
+    "min(MiLista1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['j', 'h', 'f', 'd', 'b']"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "letras[::-2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['h', 'g', 'f', 'e', 'd', 'c', 'b']"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "letras[7:0:-1]"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
