--- a/python_A-Z_Data-Science/numpy_arrays.ipynb
+++ b/python_A-Z_Data-Science/numpy_arrays.ipynb
@@ -8,7 +8,7 @@
     {
      "data": {
       "text/plain": [
-       "['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j']"
+       "[2345, 54, 86478, 697, 782, -8452]"
       ]
      },
      "execution_count": 2,
@@ -17,48 +17,17 @@
     }
    ],
    "source": [
-    "letras= ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j']\n",
-    "letras"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j']"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "letras[:]"
+    "L = [2345, 54, 86478, 697, 782, -8452]\n",
+    "L"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['c', 'd', 'e', 'f', 'g', 'h', 'i', 'j']"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "letras[2:]"
+    "import numpy as np"
    ]
   },
   {
@@ -69,7 +38,7 @@
     {
      "data": {
       "text/plain": [
-       "['a', 'b', 'c', 'd', 'e', 'f', 'g']"
+       "array([ 2345,    54, 86478,   697,   782, -8452])"
       ]
      },
      "execution_count": 4,
@@ -78,7 +47,7 @@
     }
    ],
    "source": [
-    "letras[:7]"
+    "np.array(L)"
    ]
   },
   {
@@ -89,7 +58,7 @@
     {
      "data": {
       "text/plain": [
-       "['c', 'd', 'e', 'f', 'g']"
+       "array([ 2345,    54, 86478,   697,   782, -8452])"
       ]
      },
      "execution_count": 5,
@@ -98,7 +67,8 @@
     }
    ],
    "source": [
-    "letras[2:7]"
+    "a = np.array(L)\n",
+    "a"
    ]
   },
   {
@@ -109,7 +79,7 @@
     {
      "data": {
       "text/plain": [
-       "['c', 'd', 'e', 'f', 'g']"
+       "13650.666666666666"
       ]
      },
      "execution_count": 6,
@@ -118,27 +88,14 @@
     }
    ],
    "source": [
-    "letras[-8:7]"
+    "a.mean()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['c', 'e', 'g', 'i']"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "letras[2:9:2]"
+    "---\n"
    ]
   },
   {
@@ -149,7 +106,7 @@
     {
      "data": {
       "text/plain": [
-       "['a', 'd', 'g', 'j']"
+       "array([ 2345,    54, 86478,   697,   782, -8452])"
       ]
      },
      "execution_count": 8,
@@ -158,47 +115,49 @@
     }
    ],
    "source": [
-    "letras[::3]"
+    "a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['j', 'h', 'f', 'd', 'b']"
+       "array([   54, 86478])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "letras[::-2]"
+    "#slicing de arrays\n",
+    "a[1:3]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['h', 'g', 'f', 'e', 'd', 'c', 'b']"
+       "array([ 2345,    54, 86478,   697,   782, -8452])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "letras[7:0:-1]"
+    "ab= a.copy() #copia de un array\n",
+    "ab"
    ]
   }
  ],
