tarea Analisis de estados financieros

--- a/python_A-Z_Data-Science/tarea_AnalisisDeEstadosFinancieros.ipynb
+++ b/python_A-Z_Data-Science/tarea_AnalisisDeEstadosFinancieros.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,31 +13,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[2522.67,\n",
-       " 1911.3900000000003,\n",
-       " -3707.790000000001,\n",
-       " -2914.3099999999995,\n",
-       " -599.9200000000001,\n",
-       " 7265.24,\n",
-       " 8210.550000000001,\n",
-       " 3944.9700000000003,\n",
-       " 3328.3899999999994,\n",
-       " -2238.6500000000015,\n",
-       " 659.5999999999985,\n",
-       " 11629.54]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Respuesta\n",
     "#Calcular la Utilidad como la diferencia entre los Ingresos y los Gastos\n",
@@ -50,31 +28,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[756.8,\n",
-       " 573.42,\n",
-       " -1112.34,\n",
-       " -874.29,\n",
-       " -179.98,\n",
-       " 2179.57,\n",
-       " 2463.17,\n",
-       " 1183.49,\n",
-       " 998.52,\n",
-       " -671.6,\n",
-       " 197.88,\n",
-       " 3488.86]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Calcular el impuesto como el 30% de la utilidad y redondea a 2 puntos decimales\n",
     "impuesto = [round(i * 0.3, 2) for i in utilidad]\n",
@@ -83,31 +39,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1765.8700000000001,\n",
-       " 1337.9700000000003,\n",
-       " -2595.4500000000007,\n",
-       " -2040.0199999999995,\n",
-       " -419.94000000000005,\n",
-       " 5085.67,\n",
-       " 5747.380000000001,\n",
-       " 2761.4800000000005,\n",
-       " 2329.8699999999994,\n",
-       " -1567.0500000000015,\n",
-       " 461.71999999999855,\n",
-       " 8140.68]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Calcular la Utilidad después de restarle el impuesto\n",
     "utilidad_despues_de_impuestos = []\n",
@@ -125,11 +59,11 @@
     "#Calcular el margen de Utilidad como la Utilidad Después de Impuestos sobre los Ingresos\n",
     "#Redondea a 2 puntos decimales, luego multiplica por 100 para obtener el %\n",
     "margen_de_utilidad = []\n",
-    "for i in range (0, len(_____)):\n",
-    "    margen_de_utilidad.append(_______[i] / ______[i])\n",
+    "for i in range (0, len(utilidad_despues_de_impuestos)):\n",
+    "    margen_de_utilidad.append(utilidad_despues_de_impuestos[i] / ingresos[i])\n",
     "margen_de_utilidad\n",
     "\n",
-    "margen_de_utilidad = [_____((_____),___) for i in margen_de_utilidad]\n",
+    "margen_de_utilidad = [round((i),2) for i in margen_de_utilidad]\n",
     "\n",
     "margen_de_utilidad"
    ]
@@ -141,7 +75,7 @@
    "outputs": [],
    "source": [
     "#Calcula el promedio de la Utilidad Después de Impuestos (UDI) para los últimos 12 meses\n",
-    "promedio_udi = sum(______) / len(______)\n",
+    "promedio_udi = sum(utilidad_despues_de_impuestos) / len(utilidad_despues_de_impuestos)\n",
     "promedio_udi"
    ]
   },
@@ -152,9 +86,9 @@
    "outputs": [],
    "source": [
     "#Encuentra los meses con Utilidad por encima del promedio de la Utilidad Después de Ïmpuestos promedio \n",
-    "meses_buenos = ______\n",
-    "for i in range (0, len(_______)):\n",
-    "    _______.append(______[i] > ______)\n",
+    "meses_buenos = []\n",
+    "for i in range (0, len(utilidad_despues_de_impuestos)):\n",
+    "    meses_buenos.append(utilidad_despues_de_impuestos[i] > promedio_udi)\n",
     "meses_buenos"
    ]
   },
@@ -165,9 +99,9 @@
    "outputs": [],
    "source": [
     "#Los Meses Malos son lo opuesto a los Meses Buenos!\n",
-    "meses_malos = ______\n",
-    "for i in range (0, len(_______)):\n",
-    "    _______.append(not (________[i]))\n",
+    "meses_malos = []\n",
+    "for i in range (0, len(meses_buenos)):\n",
+    "    meses_malos.append(not (meses_buenos[i]))\n",
     "meses_malos"
    ]
   },
@@ -178,9 +112,9 @@
    "outputs": [],
    "source": [
     "#El Mejor Mes es donde la Utilidad Después de Impuestos fue igual al máximo \n",
-    "mejor_mes = ______\n",
-    "for i in range (0, len(________)):\n",
-    "    ________.append(_______[i] == max(________))\n",
+    "mejor_mes = []\n",
+    "for i in range (0, len(utilidad_despues_de_impuestos)):\n",
+    "    mejor_mes.append(utilidad_despues_de_impuestos[i] == max(utilidad_despues_de_impuestos))\n",
     "mejor_mes"
    ]
   },
@@ -191,28 +125,28 @@
    "outputs": [],
    "source": [
     "#El Peor Mes es donde la Utilidad Después de Impuestos fue igual al mínimo \n",
-    "peor_mes = _______\n",
-    "for i in range (0, len(_______)):\n",
-    "    _______.append(________[i] == min(__________))\n",
+    "peor_mes = []\n",
+    "for i in range (0, len(utilidad_despues_de_impuestos)):\n",
+    "    peor_mes.append(utilidad_despues_de_impuestos[i] == min(utilidad_despues_de_impuestos))\n",
     "peor_mes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Convierte todos los cálculos a unidades de miles de dólares\n",
-    "ingresos_1000 = [round(____, ___) for i in _____]\n",
-    "gastos_1000 = [round(_____, ___) for i in ______]\n",
-    "utilidad_1000 = [round(_____, ___) for i in ______]\n",
-    "utilidad_despues_de_impuestos_1000 = [round(______, 0) for i in ______]\n",
+    "ingresos_1000 = [round(i, 0) for i in ingresos]\n",
+    "gastos_1000 = [round(i, 0) for i in gastos]\n",
+    "utilidad_1000 = [round(i, 0) for i in utilidad]\n",
+    "utilidad_despues_de_impuestos_1000 = [round(i, 0) for i in utilidad_despues_de_impuestos]\n",
     "\n",
-    "ingresos_1000 = [int(i) for i in ______]\n",
-    "gastos_1000 = [int(i) for i in ______]\n",
-    "utilidad_1000 = [int(i) for i in ______]\n",
-    "utilidad_despues_de_impuestos_1000 = [int(i) for i in ______]"
+    "ingresos_1000 = [int(i) for i in ingresos_1000]\n",
+    "gastos_1000 = [int(i) for i in gastos_1000]\n",
+    "utilidad_1000 = [int(i) for i in utilidad_1000]\n",
+    "utilidad_despues_de_impuestos_1000 = [int(i) for i in utilidad_despues_de_impuestos_1000]"
    ]
   },
   {
